# studbotty

./: .env  .env.example  CONTEXT_ENHANCEMENT_README.md  README.md  agent.py  config.py  diagram.html  flashcards.json  flashcards_photosynthesis..html  flashcards_photosynthesis.html  flashcards_the_process_of_respiration.html  flashcards_visualization.html  main.py  pyproject.toml  studbotty_data.json  test_context_system.py  test_viz_tool.py
tools/: __init__.py  anki.py  base.py  chat.py  context_manager.py  files.py  math_tools.py  persist.py  quiz.py  recall.py  search.py  summary.py  tts.py  viz.py
